Changes title and js script

--- a/finals.html
+++ b/finals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Add a Todo Exercise</title>
+        <title>Todo List </title>
     </head>
     <body>
         <h1>Add a Todo</h1>
@@ -16,6 +16,6 @@
                 
             </ul>
         </section>
-        <script src="todo.js"></script>
+        <script src="finals.js"></script>
     </body>
 </html>
