--- a/finals.html
+++ b/finals.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Todo List </title>
+        <link href="Final-Project/finals.css" rel="stylesheet">
     </head>
     <body>
         <h1>Add a Todo</h1>
@@ -17,5 +18,4 @@
             </ul>
         </section>
         <script src="finals.js"></script>
-    </body>
 </html>
