Did more things
It was my fault for not commiting

--- a/finals.html
+++ b/finals.html
@@ -2,14 +2,19 @@
 <html>
     <head>
         <title>Todo List </title>
-        <link href="Final-Project/finals.css" rel="stylesheet">
+        <style>
+            .line{
+                text-decoration-line: line-through = false;
+
+            }
+        </style>
     </head>
     <body>
         <h1>Add a Todo</h1>
         <form>
             <label>New Todo:</label>
             <input id= "newTodo" type="text">
-            <button type="submit">Submit</button>
+            <button type="submit" class= "fir">Submit</button>
         </form>
         <section> 
             <h2>Todo List:</h2>
