--- a/finals.html
+++ b/finals.html
@@ -2,12 +2,6 @@
 <html>
     <head>
         <title>Todo List </title>
-        <style>
-            .line{
-                text-decoration-line: line-through = false;
-
-            }
-        </style>
     </head>
     <body>
         <h1>Add a Todo</h1>
@@ -22,5 +16,11 @@
                 
             </ul>
         </section>
+        <style>
+            a.line{
+                text-decoration: line-through = false;
+                visibility: visible;
+            }
+        </style>
         <script src="finals.js"></script>
 </html>
